--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,17 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="lightgray"> #ededed</color>
+    <color name="deeppurple"> #7c4dff</color>
+    <color name="yellow">#ffb300</color>
+    <color name="green">#00bfa5</color>
+    <color name="pink">#ff4081</color>
+    <color name="darkgray">#808080</color>
+    <color name="silver">#A9A9A9</color>
+    <color name="blush">#CD5C5C</color>
+    <color name="darkblue">#2f333f</color>
+    <color name="lightblue">#49acd5</color>
+    <color name="grass">#3CB371</color>
+    <color name="orange">#eaad43</color>
+    <color name="white">#ffffff</color>
 </resources>
