--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.mark1.flamingo.Homepage">
     <ScrollView
+        android:id = "@+id/scrollHomepage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
@@ -284,4 +285,8 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-</RelativeLayout>
+    <com.mindorks.placeholderview.SwipePlaceHolderView
+        android:id = "@+id/swipeView"
+        android:layout_width = "match_parent"
+        android:layout_height = "match_parent"/>
+</FrameLayout>
